--- a/public/css/card.css
+++ b/public/css/card.css
@@ -1,11 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,900,700,500);
  
-body {
+/* body {
   padding: 60px 0;
   background-color: rgba(178,209,229,0.7);
   margin: 0 auto;
   width: 600px;
-}
+} */
 .body-text {
   padding: 0 20px 30px 20px;
   font-family: "Roboto";
