--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -242,6 +242,7 @@ body{
 	max-width:1000px;
 	margin-left:auto;
 	margin-right:auto;
+    min-height: 430px;
 }
 .content{
 	min-height:80%;
@@ -391,6 +392,7 @@ header{
 	height:100px;
 	transition: all 0.3s;
 	z-index: 999;
+    box-shadow: 0px 2px 1px rgb(223 237 238);
 }
 header .inner-header{
 	position:relative;
@@ -434,6 +436,9 @@ header ul{
 }
 header ul li{
 	display: inline-block;
+}
+.profileMenu li a{
+    line-height: 30px !important;
 }
 header ul li a{
 	color:var(--link-color);
@@ -567,7 +572,7 @@ footer nav a:hover{
     background-color: #75aba9;
 }
 audio{
-    width: 250px!important;
+    width: 60%!important;
 }
 /*table {*/
 /*    margin-left: 10px;*/
@@ -576,21 +581,27 @@ h1.myaccount{
 	border-bottom: solid 1px #ccc;
 	margin-right: 50px;
 }
-.profileMenu{
-	position: absolute;
-    z-index: 999;
-    top: 200px;
-    right: 200px;
+.profileMenu > li{
     background-color: #eee;
-    border-radius: 4px;
+    /*box-shadow: 0px 0px 5px rgba(0,0,0,0.3);*/
+}
+.profileMenu >li > a{
+    font-size: 13px !important;
+    text-decoration: none;
+}
+.profileMenu{
+    position: absolute;
+    z-index: 999;
+    top: 30px;
+    right: 10px;
+    border-radius: 4px !important;
     padding: 16px;
     list-style: none;
     margin: 0px;
-    font-size: 13px;
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
-	visibility:hidden;
-	opacity:0;
-	transition:all 0.6s;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.6s;
+    display: grid;
 }
 .profileMenu.open{
 	opacity:1;
@@ -607,7 +618,8 @@ h1.myaccount{
     cursor: pointer;
     transition: all 0.4s;
     float: right;
-    margin-top: -60px;
+    margin-top: 0;
+    margin-bottom: -15px;
 }
 .profileButton:hover{
 	border: solid #53b1ae 3px;
@@ -619,14 +631,14 @@ h1.myaccount{
 }
 .profileMenu li a:hover{
 	color: #333;
-    text-decoration: underline;
+    /*text-decoration: underline;*/
 }
 .transaction-table {
-    border: 1px solid;
+    border: 1px solid #666;
     padding: 0;
 }
 .transaction-table  td, .transaction-table  th {
-    border: 1px solid;
+    border: 1px solid #666;
 }
 .transaction-table  th, .transaction-table  td {
     padding: 1rem;
@@ -746,6 +758,9 @@ table.transactions span.timestamp{
     color:white;
     padding: 10px;
     margin-top: 10px;
+}
+.tr-table{
+    width: 100% !important;
 }
 .tr-table tr td{
     border-bottom: 1px solid #f2f8f7;
