--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,6 +7,9 @@ font-family: 'Cairo', sans-serif;
 font-family: 'Russo One', sans-serif;
 
 */
+.float-right{
+    float: right;
+}
 #example_paginate{
     margin-bottom: 30px;
 }
@@ -904,6 +907,11 @@ tr td {
 }
 .mr-2{
     margin-right: 1rem;
+}.ml-2{
+    margin-left: 1rem;
+}
+.mb-3{
+    margin-bottom: 5rem;
 }
 .flex{
     display: flex;
