--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -910,6 +910,13 @@ tr td {
 }.ml-2{
     margin-left: 1rem;
 }
+
+.alert {
+    padding: 20px;
+    background-color: #ff9800; /* Red */
+    color: white;
+    margin-bottom: 15px;
+}
 .mb-3{
     margin-bottom: 5rem;
 }
