--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;400&family=Russo+One&display=swap');
 
+.d-none{
+    display: none;
+}
 
 /*
 
@@ -252,6 +255,22 @@ form.register label{
     transition: all 0.4s !important;
     margin-top: 15px;
     border-radius:5px;
+}
+.info-btn {
+    display: block !important;
+    width: 200px !important;
+    padding: 0px !important;
+    border: none !important;
+    line-height: 50px !important;
+    background-color: #44908d !important;
+    color: #fff !important;
+    letter-spacing: 3px !important;
+    cursor: pointer !important;
+    transition: all 0.4s !important;
+    margin-top: 15px;
+    border-radius:5px;
+    margin-left: 3rem;
+;
 }
 .drop-btn {
     display: block !important;
@@ -939,6 +958,44 @@ tr td {
     grid-gap: 10px;
     padding: 10px;
     margin-left: -10px;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 999; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 @media only screen and (max-width: 640px) {
 	section ul.faq li{
